--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^10.0.1",
+    "@testing-library/react": "^9.1.3",
+    "@testing-library/react-hooks": "^2.0.1",
     "cross-env": "^5.2.0",
-    "eslint": "5.16.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-config-standard-react": "^6.0.0",
     "eslint-plugin-import": "^2.13.0",
@@ -57,7 +57,9 @@
     "eslint-plugin-standard": "^3.1.0",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
+    "react-dom": "^16.9.0",
     "react-scripts": "^3.0.1",
+    "react-test-renderer": "^16.9.0",
     "rollup": "^1.1.2",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.2.0",
